annotations: hidden created_at/updated_at attributes
