# tests/Commands/test_openapi.yaml
@@ -1300,8 +1300,6 @@ components:
                   e_mail: john.doe@foo.com
                   phone: 1234-567890
                   nationality: GB
-                created_at: '2019-01-01 01:00:00'
-                updated_at: '2019-01-01 01:00:00'
     Internships:
       description: 'Response returning a list of internships'
       content:
@@ -2023,15 +2021,8 @@ components:
               type: integer
             student:
               $ref: '#/components/schemas/Student'
-            created_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
-            updated_at:
-              type: string
-              pattern: '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}$'
           required:
             - id
-            - created_at
           additionalProperties: false
       example:
         id: 1
@@ -2044,8 +2035,6 @@ components:
           e_mail: john.doe@foo.com
           phone: 1234-567890
           nationality: GB
-        created_at: '2019-01-01 01:00:00'
-        updated_at: '2019-01-01 01:00:00'
     NewInternship:
       type: object
       properties:
